SSP-1544 Action Plan Multiple Reminders - Initial Check In